Removed userFlashFlower function to be replaced with individual functions for each flower. Each flower clicked now add a different number to the playerOrder array to be compared to the order array.

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 						<img src="assets/images/pink-flower.png" alt="Pink Flower">
             </div>
                 
-						<div class="flower blue-flower">
+						<div class="blue-flower">
 							<img src="assets/images/blue-flower.png" alt="Blue Flower">
             </div>
-							<div class="flower green-flower">
+							<div class="green-flower">
 								<img src="assets/images/green-flower.png" alt="Green Flower">
             </div>
 							</div>
@@ -82,13 +82,13 @@
                             0
                         </div>
 							<div class="col-10 d-flex justify-content-center">
-								<div class="flower purple-flower">
+								<div class="purple-flower">
 									<img src="assets/images/purple-flower.png" alt="Purple Flower">
             </div>
-									<div class="flower red-flower">
+									<div class="red-flower">
 										<img src="assets/images/red-flower.png" alt="Red Flower">
             </div>
-										<div class="flower yellow-flower">
+										<div class="yellow-flower">
 											<img src="assets/images/yellow-flower.png" alt="Yellow Flower">
             </div>
 										</div>
