--- a/index.html
+++ b/index.html
@@ -11,22 +11,25 @@
 </head>
 
 <body>
-    <header class="headerbackgrond">
-        <div class="row no-gutters">
-            <div class="col-12">
-             <nav class="navbar navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link" href="index.html">Play! <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="contact.html">Contact</a>
-            </div>
-            </div>
-        </nav>
-            </div>
-        </div>
+    <header>
+        <div class="row no-gutters headerbackground">
+     <div class="pos-f-t">
+  <div class="collapse" id="navbarToggleExternalContent">
+    <div class="bg-light p-4">
+        <a class="menuitem" href="index.html"><h5 class="text-white h4">Play!</h5>
+        </a>
+        <a class="menuitem" href="contact.html"> <h5 href="contact.html" class="text-white h4">Contact Us</h5>
+        </a>
+    </div>
+  </div>
+  <nav class="navbar navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </nav>
+</div>
+</div>
+     
     </header>
 	<section>
 		<div class="container">
@@ -105,7 +108,10 @@
 								</div>
 	</section>
 
-	<script src="assets/js/script.js"></script>
+	
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="assets/js/script.js"></script>
 </body>
 
 </html>
