Debugging, added some console.logs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="row no-gutters headerbackground">
-     <div class="pos-f-t">
+     <div class=" col-12 pos-f-t">
   <div class="collapse" id="navbarToggleExternalContent">
     <div class="bg-light p-4">
         <a class="menuitem" href="index.html"><h5 class="text-white h4">Play!</h5>
@@ -27,7 +27,11 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   </nav>
+
+
+
 </div>
+
 </div>
      
     </header>
@@ -81,7 +85,7 @@
 			</div>
                        
 			<div class="row flowerrow2">
-                        <div class="col-1 stingscount">
+                        <div id="stingscount" class="col-1">
                             0
                         </div>
 							<div class="col-10 d-flex justify-content-center">
