Added a row of three new flowers to the bottom of the game design to make the game harder.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
                                     0
                                     </div>
 				</div>
+            <div class="row flowerrow3">
+                <div class="col-12 d-flex justify-content-center">
+					<div class="black-flower">
+						<img src="assets/images/black-flower.png" alt="Black Flower">
+            </div>
+									<div class="tropical-flower">
+										<img src="assets/images/tropical-flower.png" alt="Tropical Flower">
+            </div>
+										<div class="white-flower">
+											<img src="assets/images/white-flower.png" alt="White Flower">
+            </div>
+										</div>
+                        
+				</div>    
             <div class="row ">
                 <div class="col-12 topscorerow">
                     <h6 class="topscore">Top Score:</h6>
