Minor amendments to layout

--- a/index.html
+++ b/index.html
@@ -46,16 +46,15 @@
 
 					<h6>You are trying to help your bee friend to collect enough pollen for her hive. She does not know
 						which
-						flowers are poisonous, it is up to you to remember for her! If you successfully lead her to the
+						flowers are poisonous, so it is up to you to remember for her! If you successfully lead her to the
 						correct
 						flowers, she will reward you with honey, but if you fail she will sting you!</h6>
 
 				</div>
 				<div class="col-12 d-flex justify-content-center intro">
 
-					<h6>Watch the flowers appear and remember the order, once the bee sets off you must click on the
-						flowers
-						in the correct order to complete the game. </h6>
+					<h6>Watch the flowers change colour and remember the order. <span class="numbercolour">Successfully land on 20 flowers</span>
+                    to complete the game. You can survive 3 stings, <span class="numbercolour">after you have been stung 3 times</span> you will lose the game.</h6>
 				</div>
                 <div class="col-12 d-flex justify-content-center">
 
@@ -63,20 +62,14 @@
                     
 				</div>
 			</div>
-            <div class="row">
+            <div class="row score">
                 <div class="col-6">
                     <h6 class="stings">Stings</h6>
-                </div>
-                <div class="col-6">
-                    <h6 class="level">Level</h6>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-6">
                     <h6 id="stingscount">0</h6>
                 </div>
                 <div class="col-6">
-                    <h6 class="levelcount">0</h6>
+                <h6 class="levelcount">0</h6>
+                    <h6 class="level">Level</h6>
                 </div>
             </div>
 			<div class="row flowerrow1">
@@ -128,7 +121,7 @@
             <div class="row ">
                 <div class="col-12 topscorerow">
                     <h6 class="topscore">Top Score:</h6>
-                    <h6 class="topscorecount">0</h6>
+                    <h6 id="topscorecount">0</h6>
                 </div>
             </div>                    
 								</div>
