--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
 </script>
+
 <script type="text/javascript">
    (function(){
       emailjs.init("user_2sjHUO9InRk6PBqiQEJCF");
@@ -51,7 +52,7 @@
                     if you have any questions or feedback please feel free to get in touch!</h6>
 				</div>
                 <div class="col-12 d-flex justify-content-center intro">
-<form onsubmit="return sendMail(this); "> 
+<form id="contactForm" onsubmit="return sendMail(this); "> 
 <div class="form-group">
     <label for="fname">First Name</label>
     <input type="text" class="form-control" id="fname">
@@ -79,7 +80,7 @@
     <label for="message">Please write your message here</label>
     <textarea class="form-control" id="message" rows="3"></textarea>
   </div>
-   <button type="submit" class="btn btn-primary">Submit</button>
+   <button type="submit" class="btn btn-primary" onclick="resetForm()">Submit</button>
 </form>
 				
 				</div>
@@ -88,7 +89,12 @@
 	</section>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
+<script>
+function resetForm() {
+  document.getElementById("contactForm").reset();
+  alert("Thank you for your message, we will respond to you as soon as we can!")
+}
+</script>
 <script src="assets/js/sendEmail.js"></script>
 </body>
 
