Fixed bug in wingame() function, and created readme.md, still needs amending

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 					<h1>Contact Us</h1>
 				</div>
                 <div class="col-12 d-flex justify-content-center intro">
-					<h6>We love to hear about our fellow bee savers, 
+					<h6>We love to hear from our fellow bee savers, 
                     if you have any questions or feedback please feel free to get in touch!</h6>
 				</div>
                 <div class="col-12 d-flex justify-content-center intro">
@@ -68,10 +68,11 @@
   <div class="form-group">
     <label for="topic">What would you like to contact us about?</label>
     <select class="form-control" id="topic">
+      <option>General Inquiries</option>
       <option>Feedback</option>
       <option>Contact the Developer</option>
-      <option>Issues/Complaints</option>
-      <option>Ideas</option>
+      <option>Complaints</option>
+      <option>Ideas for improvements</option>
       <option>Other</option>
     </select>
   </div>
