--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="row no-gutters headerbackground">
-     <div class=" col-12 pos-f-t">
+     <div class="pos-f-t">
   <div class="collapse" id="navbarToggleExternalContent">
     <div class="bg-light p-4">
         <a class="menuitem" href="index.html"><h5 class="text-white h4">Play!</h5>
