--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Boostrap CDN -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
 		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- CSS Style Sheet -->
 	<link rel="stylesheet" href="assets/css/style.css">
+    <!-- JS Script for Email API -->
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
 </script>
@@ -17,10 +20,12 @@
      
    })();
 </script>
+
 	<title>Beemember</title>
 </head>
 
 <body>
+<!-- Start of Navbar, the same code is used on all pages -->
     <header>
         <div class="row no-gutters headerbackground">
      <div class="pos-f-t">
@@ -37,11 +42,13 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   </nav>
+  <!-- End of Navbar -->
 </div>
 </div>
      
     </header>
 	<section>
+    <!-- Contact Us Heading and blurb -->
 		<div class="container">
 			<div class="row">
 				<div class="col-12 d-flex justify-content-center intro">
@@ -52,6 +59,8 @@
                     if you have any questions or feedback please feel free to get in touch!</h6>
 				</div>
                 <div class="col-12 d-flex justify-content-center intro">
+                <!-- Contact form -->
+                <!-- on submit the form will initiate the sendMail function, stored in sendEmail.js -->
 <form id="contactForm" onsubmit="return sendMail(this); "> 
 <div class="form-group">
     <label for="fname">First Name</label>
@@ -88,6 +97,7 @@
 			</div>
 		</div>
 	</section>
+    <!-- Jquery for bootstrap, and script for email API -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script>
@@ -96,6 +106,7 @@ function resetForm() {
   alert("Thank you for your message, we will respond to you as soon as we can!")
 }
 </script>
+<!-- sendMail() function held inside sendEmail.js so linked here -->
 <script src="assets/js/sendEmail.js"></script>
 </body>
 
