--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<!-- CSS Style Sheet Link -->
     <link rel="stylesheet" href="assets/css/style.css">
-   
-	<title>Beemember</title>
+  
+    <title>Beemember</title>
 </head>
 
 <body>
@@ -73,7 +73,7 @@
 			</div>
             <!-- Scoring text, contains level and sting information so the user can judge their progress throughout
             the game -->
-            <div class="row score">
+            <div class="row score" id="scrollTop">
                 <div class="col-6">
                     <h6 class="stings">Stings</h6>
                     <h6 id="stingscount">0</h6>
@@ -143,7 +143,10 @@
 	</section>
 
 	<!-- Jquery for bootstrap and javascript code for the game play  -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.5.1.js"
+  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+  crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="assets/js/script.js"></script>
 </body>
