Amended flowerPressed() functions to call flashFlower() function before the check() function

--- a/contact.html
+++ b/contact.html
@@ -109,6 +109,7 @@
 		function resetForm() {
   document.getElementById("contactForm").reset();
   alert("Thank you for your message, we will respond to you as soon as we can!")
+  window.location.replace("/");
 }
 	</script>
 	<!-- sendMail() function held inside sendEmail.js so linked here -->
