--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
 </head>
 
 <body>
+<audio id="stingsound">
+  <source src="assets/audio/sting.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+<audio id="flowersound">
+  <source src="assets/audio/flower.wav" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+<audio id="startsound">
+  <source src="assets/audio/start.wav" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+<audio id="winsound">
+  <source src="assets/audio/win.wav" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+<audio id="losesound">
+  <source src="assets/audio/lose.wav" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 <!-- Start of Navbar, the same code is used on all pages -->
     <header>
         <div class="row no-gutters headerbackground">
