Validator checks run on HTML and CSS, screenshots added to assets/images/screenshots and readme.md file updated appropriately.

--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
 	<!-- CSS Style Sheet -->
 	<link rel="stylesheet" href="assets/css/style.css">
 	<!-- JS Script for Email API -->
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+	<script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
 	</script>
 
-	<script type="text/javascript">
+	<script>
 		(function(){
       emailjs.init("user_2sjHUO9InRk6PBqiQEJCF");
      
@@ -34,7 +34,7 @@
 							<h5 class="text-white h4">Play!</h5>
 						</a>
 						<a class="menuitem" href="contact.html">
-							<h5 href="contact.html" class="text-white h4">Contact Us</h5>
+							<h5 class="text-white h4">Contact Us</h5>
 						</a>
 					</div>
 				</div>
