--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="bg-light p-4">
         <a class="menuitem" href="index.html"><h5 class="text-white h4">Play!</h5>
         </a>
-        <a class="menuitem" href="contact.html"> <h5 href="contact.html" class="text-white h4">Contact Us</h5>
+        <a class="menuitem" href="contact.html"> <h5 class="text-white h4">Contact Us</h5>
         </a>
     </div>
   </div>
